# ebpf_study

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Vagrantfile  devcontainer.json  go.mod  go.sum  main.c  readme.md
.devcontainer/: devcontainer.json
.vagrant/machines/default/virtualbox/: action_provision  action_set_name  id  index_uuid  private_key  synced_folders
.vagrant/machines/k8s-node1/virtualbox/: vagrant_cwd
case/01-sys_enter_write/: test.bpf.c
case/02-kprobe/: test.bpf.c
case/03-xdp/: test.bpf.c
case/04-go/: main.go  tc_write_bpf.c
case/04-go/sys/: doc.go
case/04-go/tc/: loader.go  tc_write.bpf.c
case/04-go/xdp/: doc.go  loader.go  xdp.bpf.c  xdp_bpfeb.go  xdp_bpfel.go
data/: hello.c  hello.py
examples/: args.c  cgroup_skb.go  fentry.go  kprobe.bpf.c  kprobe.go  kprobe_percpu.go  kprobe_pin.go  multi.go  my.c  ringbuffer.go  sys.bpf.c  tcprtt.c  tcprtt.go  tcx.go  tracepoint.go  uretprobe.go  xdp.bpf.c  xdp.go  xdp2.go  xdp_acl.c  xdp_metadata.c  xdpsnoop.c
examples/01-sys_enter_write/: test.bpf.c
examples/02-kprobe/: test.bpf.c
examples/03-xdp/: test.bpf.c
examples/04-go/sys/: doc.go  loader.go  sys.bpf.c  sys_bpfeb.go  sys_bpfel.go  sys_x86_bpfel.go
examples/04-go/tc/: doc.go  tc_write.bpf.c
examples/04-go/xdp/: doc.go  loader.go  xdp.bpf.c  xdp_bpfeb.go  xdp_bpfel.go
examples/_cgroup_skb/: main.go
examples/_fentry/: fentry.c
examples/_kprobe/: kprobe.c
examples/_kprobe_percpu/: kprobe_percpu.c
examples/_kprobepin/: kprobe_pin.c  main.go
examples/_tcprtt_sockops/: tcprtt_sockops.c
examples/_tcx/: tcx.c
examples/_tracepoint_in_c/: main.go  tracepoint.c
examples/_uretprobe/: main.go
examples/_xdp/: main.go  xdp.c
examples/cgroup_skb/: cgroup_skb.c  main.go
examples/data/: hello.c
examples/fentry/: main.go
examples/kprobe/: kprobe.c  main.go
examples/kprobe_percpu/: main.go
examples/kprobepin/: main.go
examples/ringbuffer/: main.go  ringbuffer.c
examples/tcprtt/: main.go  tcprtt.c
examples/tcprtt_sockops/: main.go  tcprtt_sockops.c
examples/tcx/: main.go
examples/tracepoint_in_c/: main.go
examples/uretprobe/: main.go  uretprobe.c
examples/xdp/: main.go
include/: bpf_helper_defs.h  bpf_helpers.h  bpf_tracing.h  common.h  libxdp_acl.h  libxdp_generated.h  libxdp_map.h  vmlinux.h
resources/: compile.sh  init.sh
